k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pedidos-veloz
  labels:
    name: pedidos-veloz
    environment: production
